--- a/pohledy/rozlozeni.phtml
+++ b/pohledy/rozlozeni.phtml
@@ -34,7 +34,7 @@
             <nav>
             <ul>
             <li><a href="uvod">Úvod</a></li>
-            
+            <li><a href="vypisakci">Výpis akcí</a></li>
             <li><a href="disciplina">Disciplina</a></li>
             <li><a href="sporty">Sporty</a></li>
             <li><a href="chyba">Chyba</a></li>
@@ -54,7 +54,7 @@
         
         
             
-            <li><a href="akce">Vytvoreni Akcí</a></li>
+            <li><a href="vytvorakce">Vytvoreni Akcí</a></li>
             <li><a href="pridelenidisciplin">Přidelení žáku k disciplínam</a></li>
         
         
