zacinani delani soupisky

--- a/pohledy/akce.phtml
+++ b/pohledy/akce.phtml
@@ -46,6 +46,9 @@
                     }
                 endforeach; ?>
             </div>
+
+            <a href="soupiska"><button type="button">+</button></a>
+
         </div>
 
         <!-- Edit -->
