--- a/pohledy/vypisakci.phtml
+++ b/pohledy/vypisakci.phtml
@@ -8,7 +8,7 @@
 <body>
 
 
-<!-- Display the list of links -->
+<!--Vypis akcí-->
 <ul>
     <?php foreach ($this->data["akce"] as $akce): ?>
         <li>
