--- a/pohledy/vytvorakce.phtml
+++ b/pohledy/vytvorakce.phtml
@@ -21,36 +21,28 @@
 <form method="post">
     <!-- Nazev akce -->
     <label for="nazev_akce">Nazev: </label>
-    <input type="text" name="nazev_akce">
+    <input required type="text" name="nazev_akce">
     <!-- Datum -->
     <label for="datum_zahajeni">Datum zahajeni: </label>
-    <input type="date" name="datum_zahajeni">
+    <input required type="date" name="datum_zahajeni">
     <!-- Delka dni -->   
     <label for="datum_konce">Datum konce: </label>
     <input type="date" name="datum_konce">
     <!-- Misto konani -->
     <label for="misto_kon">Misto konani: </label>
-    <input type="text" name="misto_kon">
+    <input required type="text" name="misto_kon">
     <!-- Popis akce -->
     <label for="popisek_akce">Popis: </label>
-    <textarea name="popisek_akce" rows="4" cols="50"></textarea>
+    <textarea required name="popisek_akce" rows="4" cols="50"></textarea>
     <!-- Disciplina -->
     <label for="id_disc">Disciplina:</label>
-    <div class="divAkceDisc">
-        <!-- Pridání dalšich disciplín -->
-        <button class="btnDisc">Přidat disciplinu (max 10)&nbsp; 
-            <span style="font-size:16px; font-weight:bold;">+ </span> <!-- Vzhled se muze zmenit -->
-        </button>
-        <!-- Zákldní combobox -->
-        <div>
-            <select name="id_disc[]" class="select" style="width: 100%">
-                <?php foreach ($this->data['disc'] as $disc):?>
-                    <option value="<?= $disc['id_disc']; ?>"><?= $disc['nazev_disc']; ?></option>
-                <?php endforeach; ?>
-            </select>
-        </div>
-        <!-- Blok kde budou dynamcké comboboxy -->
-        <div id="combobox-blok"></div>
+    <!-- Multiple select jako combobox -->
+    <div>
+        <select required name="id_disc[]" class="select" style="width: 100%" multiple>
+            <?php foreach ($this->data['disc'] as $disc):?>
+                <option value="<?= $disc['id_disc']; ?>"><?= $disc['nazev_disc']; ?></option>
+            <?php endforeach; ?>
+        </select>
     </div>
     <!-- Tlačítka pro Přidání -->
     <button type="submit" name="pridej">Přidat záznam</button>
@@ -61,131 +53,12 @@
 <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 <script>
 $(document).ready(function() {
-    var max_pocet = 10;
-    var wrapper = $("#combobox-blok");
-    var btn = $(".btnDisc");
-
-    var pocet = 1;
-
     // Applynuti select2 na základní combobox
-    $('.select').select2({dropdownAutoWidth : true});
-
-    $(btn).click(function(e) {
-        e.preventDefault();
-        if (pocet < max_pocet) {
-            pocet++;
-            var dynamCombobox = '<div><select name="id_disc[]" class="select" style="width: 100%">' +
-                '<?php foreach ($this->data['disc'] as $disc): ?>' +
-                    '<option value="<?= $disc['id_disc']; ?>"><?= $disc['nazev_disc']; ?></option>' +
-                '<?php endforeach; ?>' +
-            '</select><a href="#" class="odebrat">Odebrat</a></div>';
-            $(wrapper).append(dynamCombobox);
-
-            // Applynuti select2 na dynamické comboboxy
-            $('.select').select2({dropdownAutoWidth : true}); //{dropdownAutoWidth : true} se muze odstranit, je to jen docasna esteticka uprava
-        } else {
-            alert('Maximalně 10 disciplín');
-        }
-    });
-    $(document).on("click", ".odebrat", function(e) {
-        e.preventDefault();
-        $(this).parent('div').remove();
-        pocet--;
-    });
+    $('.select').select2({
+        dropdownAutoWidth : true,
+        placeholder: "-- Výběr disciplíny --"});
 });
 </script>
-
-
-
-<!-- Výpis všech akce -->
-
-<?php if (isset($this->data['akce']) && !empty($this->data['akce'])): ?>
-    <h2>Všechny akce</h2>
-    <ul>
-    <?php foreach ($this->data['akce'] as $akce): ?>
-        <li>ID záznamu: <?php echo $akce['id_akce']; ?>
-            <form method="post">
-                <input type="hidden" name="id_akce" value="<?php echo $akce['id_akce']; ?>">
-                <!-- Nazev akce -->
-                <label for="nazev_akce">Nazev: </label>
-                <input type="text" name="nazev_akce" value="<?php echo $akce['nazev_akce']; ?>">
-                <!-- Datum -->
-                <label for="datum_zahajeni">Datum zahajeni: </label>
-                <input type="date" name="datum_zahajeni" value="<?php echo $akce['datum_zahajeni']; ?>">
-                <!-- Delka dni -->   
-                <label for="datum_konce">Delka dni: </label>
-                <input type="date" name="datum_konce" value="<?php echo $akce['datum_konce']; ?>">
-                <!-- Misto konani -->
-                <label for="misto_kon">Misto konani: </label>
-                <input type="text" name="misto_kon" value="<?php echo $akce['misto_kon']; ?>">
-                <!-- Popis akce -->
-                <label for="popisek_akce">Popis: </label>
-                <textarea name="popisek_akce" rows="4" cols="50"><?php echo $akce['popisek_akce']; ?></textarea>
-                <!-- Tlačítka pro Uložení a Smazání -->
-                <button type="submit" name="ulozit">Uložit</button>
-            </form>
-            <form method="post">
-                <input type="hidden" name="id_akce" value="<?php echo $akce['id_akce']; ?>">
-                <button type="submit" name="smazat">Smazat</button>
-            </form>
-        </li>
-    <?php endforeach; ?>
-    </ul>
-<?php else: ?>
-    <p>Nejsou k dispozici žádné akce.</p>
-<?php endif; ?>
-
-
-<h1>akce disc</h1>
-
-<!-- Výpis všech akcedisc -->
-
-<?php if (isset($this->data['akcedisc']) && !empty($this->data['akcedisc'])): ?>
-    <h2>Všechny akcedisc</h2>
-    <ul>
-    <?php foreach ($this->data['akcedisc'] as $akcedisc): ?>
-        <li>ID záznamu: <?php echo $akcedisc['id_akce_disc']; ?>
-            <form method="post">
-                <input type="hidden" name="id_akce_disc" value="<?php echo $akcedisc['id_akce_disc']; ?>">
-
-                <!-- Výběr akce -->
-                <label for="id_akce">Akce:</label>
-                <br>
-                <select name="id_akce">
-                    <?php foreach ($this->data['akce'] as $akce): ?>
-                        <option value="<?php echo $akce['id_akce']; ?>" <?php echo ($akcedisc['id_akce'] == $akce['id_akce']) ? 'selected' : ''; ?>>
-                            <?php echo $akce['nazev_akce']; ?>
-                        </option>
-                    <?php endforeach; ?>
-                </select>
-                <br>
-
-                <!-- Výběr ID discipliny -->
-                <label for="id_disc">ID discipliny:</label>
-                <br>
-                <select name="id_disc">
-                    <?php foreach ($this->data['disc'] as $disciplina): ?>
-                        <option value="<?php echo $disciplina['id_disc']; ?>" <?php echo ($akcedisc['id_disc'] == $disciplina['id_disc']) ? 'selected' : ''; ?>>
-                        <?php echo $disciplina['id_disc']," ", $disciplina['nazev_disc']; ?>
-                        </option>
-                    <?php endforeach; ?>
-                </select>
-                <br>
-
-                <!-- Tlačítka pro Uložení a Smazání -->
-                <button type="submit" name="ulozit">Uložit</button>
-            </form>
-            <form method="post">
-                <input type="hidden" name="id_disc_ucast" value="<?php echo $akcedisc['id_akce_disc']; ?>">
-                <button type="submit" name="smazat">Smazat</button>
-            </form>
-        </li>
-    <?php endforeach; ?>
-    </ul>
-<?php else: ?>
-    <p>Nejsou k dispozici žádné akcedisc.</p>
-<?php endif; ?>
-
 
 
 </body>
