--- a/pohledy/vytvorsoupisku.phtml
+++ b/pohledy/vytvorsoupisku.phtml
@@ -54,7 +54,7 @@
                             }
                             ?> 
                             
-                            <lable><?php echo $uziv['id_trid']." ".$uziv['jmeno']." ".$uziv['prijmeni'];?> </lable>
+                            <label><?php echo $uziv['id_trid']." ".$uziv['jmeno']." ".$uziv['prijmeni'];?> </label>
                             <br>
                             <select name="<?php echo $ucast['id_uziv']; ?>[]" class="disc" style="width: 100%" multiple><?php
                             foreach ($this->data['disc'] as $disc){
