--- a/pohledy/vytvorsoupisku.phtml
+++ b/pohledy/vytvorsoupisku.phtml
@@ -47,7 +47,6 @@
                         if(!($soupiska['id_soup']==$ucast['id_soup'])) {
                             break;
                         }
-
                         foreach ($this->data['uziv'] as $uziv){
                             if(!($uziv['id_uziv'] == $ucast['id_uziv'])) {
                                 continue;  
@@ -56,7 +55,7 @@
                             
                             <label><?php echo $uziv['id_trid']." ".$uziv['jmeno']." ".$uziv['prijmeni'];?> </label>
                             <br>
-                            <select name="<?php echo $ucast['id_uziv']; ?>[]" class="disc" style="width: 100%" multiple><?php
+                            <select name="ucastnici[<?php echo $ucast['id_uziv']; ?>][]" class="disc" style="width: 100%" multiple><?php
                             foreach ($this->data['disc'] as $disc){
                                 foreach($this->data['ad'] as $ad){
                                     if($disc['id_disc'] == $ad['id_disc'] && $ad['id_akce'] == $konkretniakce['id_akce']){?>
