--- a/pohledy/soupiska.phtml
+++ b/pohledy/soupiska.phtml
@@ -8,7 +8,8 @@
     <body>
         <h1><?php echo $konkretniSoup['nazev_skupiny'];?></h1>
 
-        <button id="switch">Switch</button> 
+        <button id="switch">Switch</button>
+        
 
         <!-- Vypis -->
         <div id="vypis">
@@ -60,26 +61,63 @@
             <!-- Edit ucastnik -->
                 <div>
                     <h2>Úcastníci</h2>
+                    <div>
+                    <!-- Přidání dalšího učastníka -->
+                        <div>
+                            <label for="id_uziv">Přidat  účastníka: </label>
+                            <select name="id_uziv" class="uziv" style="width: 100%">
+                                <?php foreach($this->data['uziv'] as $uziv){
+                                    $skipUcast = false;
+                                    foreach ($this->data['ucast'] as $ucast){
+                                        if ($ucast['id_uziv'] == $uziv['id_uziv'] && $ucast['id_soup'] == $konkretniSoup['id_soup']) {
+                                            $skipUcast = true;
+                                            break;
+                                        }   
+                                    }
+                                    if (!$skipUcast) {
+                                        ?>
+                                        <option value="<?= $uziv['id_uziv']; ?>"><?= $uziv['id_trid']." ".$uziv['jmeno']." ".$uziv['prijmeni'] ; ?></option>
+                                   <?php  
+                                    }
+                                } 
+                            ?>
+                            </select>
+                        </div>
+                        <div>
+                            <select name="disc_k_prirazeni[]" class="disc" style="width: 100%" multiple>
+                            <?php
+                                foreach ($this->data['disc'] as $disc){
+                                    foreach($this->data['ad'] as $ad){
+                                        if($disc['id_disc'] == $ad['id_disc'] && $ad['id_akce'] == $konkretniSoup['id_akce']){
+                                        ?>
+                                            <option value="<?php echo $disc['id_disc']; ?>"><?php echo $disc['nazev_disc']; ?></option>          
+                                        <?php
+                                        }
+                                    }
+                                }
+                                ?>
+                            </select>
+                        </div>
+                    </div>
+
                     <!-- Výběr Discipliny s checkboxy-->
                     <div>
                         <label for="cb_smazat">Pro smazání vybraných disciplín</label>
                         <button type="submit" name="cb_smazat">Smazat</button>
-                        
                         <?php
                         foreach ($this->data['ucast'] as $ucast){
                             if(!($ucast['id_soup'] == $konkretniSoup['id_soup'])){
                                 continue;
                             }
                         ?>
-                            <input type="hidden" name="edit_id_[]" value="<?php echo $ad['id_akce_disc']; ?>">
-                            <input type="checkbox" name="selected_disc[]" value="<?php echo $ad['id_akce_disc']; ?>">
+                            <input type="checkbox" name="selected_ucast[]" value="<?php echo $ucast['id_ucast']; ?>">
                         <?php
                             foreach ($this->data['uziv'] as $uziv){
                                 if(!($ucast['id_uziv'] == $uziv['id_uziv'])){
                                     continue;
                                 }
                                 echo "<div>";
-                                echo $uziv['jmeno']." ".$uziv['prijmeni']." ".$uziv['id_trid']."<br>";
+                                echo "<p>".$uziv['jmeno']." ".$uziv['prijmeni']." ".$uziv['id_trid']."</p>";
                                 foreach($this->data['du'] as $du){
                                     if(!($du['id_ucast']==$ucast['id_ucast'])){
                                         continue;
@@ -88,7 +126,7 @@
                                         if(!($du['id_disc']==$disc['id_disc'])){
                                             continue;
                                         }
-                                        echo $disc['nazev_disc']."<br>";
+                                        echo "<p>".$disc['nazev_disc']."</p>";
                                     }
                                 }
                                 echo "</div>";
@@ -108,6 +146,22 @@
         <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
         <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
         <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+
+        <!-- javascript (Combobox) -->
+        <script>    
+            $(document).ready(function() {
+                // Applynuti select2 na vypsané disciplíny
+                $('.uziv').select2({
+                    dropdownAutoWidth : true,
+                    placeholder: "-- Výběr sportovce --"
+                });
+
+                $('.disc').select2({
+                    dropdownAutoWidth : true,
+                    placeholder: "-- Výběr disciplín --"
+                });
+            });
+        </script>
 
         <!-- javascript (Switch) -->
         <script>
